src/test/deca/syntax/invalid/parser/float.deca
// Description:
//    Test invalide du parseur.
//
// Resultats:
//    erreur ligne 7

123.123.123
